--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
                         <li><a href="#">123 abc 21st Street</a></li>
                         <li><a href="#">Bhubneshwar BBSR 123456</a></li>
                         <li><a href="#">+(91)-1234-567-890</a></li>
-                        <li><a href="#">Manasmallik270@gmail.com</a></li>
+                        <li><a href="#">Aftabsahil81@gmail.com</a></li>
                         <li><a href="#">+(91)-1234-567-890</a></li>
                 </ul>
                 </div>
@@ -250,7 +250,7 @@
         </div>
 
         <div class="end-text">
-            <p>Copyright&copy; 2023 Manas Mallik. All rights reserved.</p>
+            <p>Copyright&copy; 2023 Sahil Aftab. All rights reserved.</p>
         </div>
      </section>
             
