--- a/index.html
+++ b/index.html
@@ -217,9 +217,8 @@
                 <div class="list">
                     <h4>Support Us</h4>
                     <ul>
-                        <li><a href="#">About Us</a></li>
-                        <li><a href="#">Terms & Conditions</a></li>
-                        <li><a href="#">Privacy Policy</a></li>
+                        <li><a href="#">Feedbacks</a></li>
+                        <li><a href="#">Tell Your Friends</a></li>
                         <li><a href="#">Help</a></li>
                         <li><a href="#">Tour</a></li>
                 </ul>
